apps/pretix/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pretix
  namespace: pretix
spec:
  selector:
    app.kubernetes.io/name: pretix
  ports:
    - name: http
      port: 80
      targetPort: http
